<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/whatsapp_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:autoLink="phone"
        android:scaleType="centerCrop"
        android:background="@drawable/whatsapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="40dp"
        tools:layout_conversion_absoluteX="10dp"
        tools:layout_conversion_absoluteY="20dp" />

    <Button
        android:id="@+id/numero_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/whatsapp"
        android:textSize="16dp"
        tools:layout_conversion_absoluteX="50dp"
        tools:layout_conversion_absoluteY="27dp"
        tools:layout_conversion_absoluteWidth="146dp"
        tools:layout_conversion_absoluteHeight="27dp"
        app:layout_constraintStart_toEndOf="@+id/whatsapp_icon"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/whatsapp_icon"
        android:layout_marginTop="0dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero_telefone" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/site_texto"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_text" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/diretor"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp" />

    <ImageButton
                android:id="@+id/site"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/www"
                tools:layout_conversion_absoluteX="10dp"
                tools:layout_conversion_absoluteY="80dp"
                tools:layout_conversion_absoluteWidth="40dp"
                tools:layout_conversion_absoluteHeight="40dp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/whatsapp_icon"
                app:layout_constraintStart_toStartOf="@+id/whatsapp_icon"
                android:layout_marginStart="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:textSize="16dp"
        tools:layout_conversion_absoluteX="55dp"
        tools:layout_conversion_absoluteY="87dp"
        tools:layout_conversion_absoluteWidth="109dp"
        tools:layout_conversion_absoluteHeight="27dp"
        app:layout_constraintStart_toEndOf="@+id/site"
        android:layout_marginStart="0dp"
        android:id="@+id/site_texto"
        app:layout_constraintTop_toTopOf="@+id/site"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/criado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/criado"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/sound"
        app:layout_constraintTop_toBottomOf="@+id/insta"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="234dp"
        tools:layout_conversion_absoluteX="20dp"
        tools:layout_conversion_absoluteY="140dp" />
                <TextView
                    android:id="@+id/monitora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitora"
                    android:textSize="20dp"
                    tools:layout_conversion_absoluteX="20dp"
                    tools:layout_conversion_absoluteY="165dp"
                    tools:layout_conversion_absoluteWidth="212dp"
                    tools:layout_conversion_absoluteHeight="27dp"
                    app:layout_constraintStart_toStartOf="@+id/criado"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/criado" />

    <TextView
        android:id="@+id/diretor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/diretor"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/monitora"
        app:layout_constraintTop_toBottomOf="@+id/monitora"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="364dp"
        tools:layout_conversion_absoluteX="20dp"
        tools:layout_conversion_absoluteY="165dp" />


    <TextView
                    android:id="@+id/developed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developed"
                    android:textSize="20dp"
                    tools:layout_conversion_absoluteX="10dp"
                    tools:layout_conversion_absoluteY="236dp"
                    tools:layout_conversion_absoluteWidth="160dp"
                    tools:layout_conversion_absoluteHeight="27dp"
        app:layout_constraintStart_toStartOf="@+id/diretor"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/diretor" />


                <TextView
                    android:id="@+id/mago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mago"
                    android:textSize="20dp"
                    tools:layout_conversion_absoluteX="20dp"
                    tools:layout_conversion_absoluteY="283dp"
                    tools:layout_conversion_absoluteWidth="177dp"
                    tools:layout_conversion_absoluteHeight="27dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/developed"
                    app:layout_constraintStart_toStartOf="@+id/developed"
                    android:layout_marginStart="8dp" />


                <TextView
                    android:id="@+id/apoio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apoio"
                    android:textSize="20dp"
                    tools:layout_conversion_absoluteX="10dp"
                    tools:layout_conversion_absoluteY="342dp"
                    tools:layout_conversion_absoluteWidth="58dp"
                    tools:layout_conversion_absoluteHeight="27dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/mago"
                    app:layout_constraintStart_toStartOf="@+id/developed"
                    android:layout_marginStart="0dp" />
                <ImageButton
                    android:id="@+id/pet"
                    android:layout_width="163dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/pet"
                    tools:layout_conversion_absoluteX="68dp"
                    tools:layout_conversion_absoluteY="330dp"
                    tools:layout_conversion_absoluteWidth="188dp"
                    tools:layout_conversion_absoluteHeight="50dp"
                    app:layout_constraintStart_toEndOf="@+id/apoio"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/mago" />

    <ImageButton
        android:id="@+id/sound"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/soundcloud"
        app:layout_constraintStart_toStartOf="@+id/site"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/site" />

    <Button
        android:id="@+id/sound_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/soundcloud"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/sound"
        app:layout_constraintTop_toTopOf="@+id/sound" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insta_text" />

    <ImageButton
        android:id="@+id/insta"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/insta"
        app:layout_constraintStart_toStartOf="@+id/site"
        app:layout_constraintTop_toBottomOf="@+id/sound" />

    <Button
        android:id="@+id/insta_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instagram"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/insta"
        app:layout_constraintTop_toTopOf="@+id/insta" />


</android.support.constraint.ConstraintLayout>
</ScrollView>